# hindsight

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml  shell.nix
agents/discourse/ingester/: SKILL.md
agents/files/ingester/: SKILL.md
agents/github/ingester/: SKILL.md
agents/pagerduty/ingester/: SKILL.md
docs/: data-structure.md
src/: corpus.rs  main.rs  mcp.rs
src/hindsight/: __init__.py
src/hindsight/ingest/: __init__.py  alertmanager.py  base.py  discourse.py  slack.py
workflows/: ingest-incidents.js
